--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <p>The mountains closest to me are:</p>
 
     <ul>
-      <li><a href="https://mtseymour.ca/">Mount Seymour</a></li>
-      <li><a href="https://www.grousemountain.com/">Grouse Mountain</a></li>
-      <li><a href="https://cypressmountain.com/">Cypress Mountain</a></li>
+      <li><a href="https://mtseymour.ca/" target="_blank"> Mount Seymour</a></li>
+      <li><a href="https://www.grousemountain.com/" target="_parent"> Grouse Mountain</a></li>
+      <li><a href="https://cypressmountain.com/" target= "_top"> Cypress Mountain</a></li>
     </ul>
     
     <p>These are the closest mountains to me.</p>
